--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM golang:1.14-alpine as build
 
-WORKDIR /go/stapro
+WORKDIR /go/reaction
 
 COPY src/app ./src/app
 COPY go.mod .
@@ -10,7 +10,7 @@ COPY .realize.yml .
 RUN apk add --no-cache git \
   && go get github.com/oxequa/realize
 
-WORKDIR /go/stapro/src/app
+WORKDIR /go/reaction/src/app
 
 RUN go build -o app
 
@@ -18,10 +18,10 @@ FROM alpine as prod
 
 WORKDIR /app
 
-COPY --from=build /go/stapro/app .
+COPY --from=build /go/reaction/app .
 
 RUN addgroup go \
   && adduser -D -G go go \
-  && chown -R go:go /stapro/app
+  && chown -R go:go /reaction/app
 
 CMD ["./app"]
